add temporary screen

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sceham università</title>
+    <title>Schema università</title>
 </head>
 <body>
-    
+    <img src="screen_temp.png" alt="">
 </body>
 </html>
