--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Schema università</title>
 </head>
 <body>
-    <img src="screen_temp.png" alt="">
+    <img src="screen_temp_1.png" alt="">
 </body>
 </html>
